CI (#42)
* Make it possible to run tests with one report and with detailed output
* Enable strict compilation
* allow executing gradlew
* Wait for performances to load by waiting for both messages to disappear.