@@ -22,6 +22,8 @@ allprojects {
 		tasks.withType<KotlinCompile> {
 			kotlinOptions {
 				jvmTarget = JavaVersion.VERSION_1_8.toString()
+				allWarningsAsErrors = true
+				verbose = true
 				freeCompilerArgs = freeCompilerArgs + "-Xuse-experimental=kotlin.Experimental"
 			}
 		}
@@ -29,64 +31,36 @@ allprojects {
 	plugins.withId("java") {
 		tasks.withType<Test> {
 			maxHeapSize = "512M"
-			//afterTest(KotlinClosure2({ descriptor: TestDescriptor, result: TestResult ->
-			//	logger.quiet("Executing test ${descriptor.className}.${descriptor.name} with result: ${result.resultType}")
-			//}))
+			allowUnsafe()
+			if (project.property("net.twisterrob.build.verboseReports").toString().toBoolean()) {
+				configureVerboseReportsForGithubActions()
+			} else {
+				//afterTest(KotlinClosure2({ descriptor: TestDescriptor, result: TestResult ->
+				//	logger.quiet("Executing test ${descriptor.className}.${descriptor.name} with result: ${result.resultType}")
+				//}))
+			}
 		}
 
 		// JUnit 5 Tag setup, see JUnit5Tags.kt
 		@Suppress("UnstableApiUsage")
 		this@allprojects.tasks {
-			/**
-			 * https://github.com/neo4j/neo4j/issues/12712
-			 */
-			fun Test.allowUnsafe() {
-				if (JavaVersion.current() < JavaVersion.VERSION_1_9) return
-				// WARNING: Illegal reflective access using Lookup on org.neo4j.memory.RuntimeInternals
-				// (org.neo4j/neo4j-unsafe/4.2.0/neo4j-unsafe-4.2.0.jar)
-				// to class java.lang.String
-				jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
-				// WARNING: Illegal reflective access by org.apache.commons.lang3.reflect.FieldUtils
-				// (org.apache.commons/commons-lang3/3.11/commons-lang3-3.11.jar)
-				// to field sun.nio.ch.FileChannelImpl.positionLock
-				jvmArgs("--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED")
-				// WARNING: Illegal reflective access by org.apache.commons.lang3.reflect.FieldUtils
-				// (org.apache.commons/commons-lang3/3.11/commons-lang3-3.11.jar)
-				// to field java.io.FileDescriptor.fd
-				jvmArgs("--add-opens", "java.base/java.io=ALL-UNNAMED")
-				// WARNING: Illegal reflective access by com.shazam.shazamcrest.CyclicReferenceDetector
-				// (com.shazam/shazamcrest/0.11/shazamcrest-0.11.jar)
-				// to field java.time.OffsetDateTime.serialVersionUID
-				// to field java.net.URI.serialVersionUID
-				jvmArgs("--add-opens", "java.base/java.time=ALL-UNNAMED")
-				jvmArgs("--add-opens", "java.base/java.net=ALL-UNNAMED")
-				// WARNING: Illegal reflective access by org.eclipse.collections.impl.utility.ArrayListIterate
-				// (org.eclipse.collections/eclipse-collections/10.3.0//eclipse-collections-10.3.0.jar)
-				// to field java.util.ArrayList.elementData
-				jvmArgs("--add-opens", "java.base/java.util=ALL-UNNAMED")
-			}
-
 			val test = "test"(Test::class) {
-				allowUnsafe()
 				useJUnitPlatform {
 				}
 			}
 			val unitTest = register<Test>("unitTest") {
-				allowUnsafe()
 				useJUnitPlatform {
 					excludeTags("functional", "integration")
 				}
 				shouldRunAfter()
 			}
 			val functionalTest = register<Test>("functionalTest") {
-				allowUnsafe()
 				useJUnitPlatform {
 					includeTags("functional")
 				}
 				shouldRunAfter(unitTest)
 			}
 			val integrationTest = register<Test>("integrationTest") {
-				allowUnsafe()
 				maxParallelForks = 2
 				useJUnitPlatform {
 					includeTags("integration")
@@ -95,7 +69,6 @@ allprojects {
 				shouldRunAfter(unitTest, functionalTest)
 			}
 			val integrationExternalTest = register<Test>("integrationExternalTest") {
-				allowUnsafe()
 				useJUnitPlatform {
 					includeTags("integration & external")
 				}
@@ -110,6 +83,28 @@ allprojects {
 				// Don't want to run it automatically, ever.
 				setDependsOn(dependsOn.filterNot { it is TaskProvider<*> && it.name == integrationExternalTest.name })
 			}
+		}
+	}
+}
+
+// Need to eagerly create this, so that we can call tasks.withType in it.
+project.tasks.create<TestReport>("tests") {
+	destinationDir = file("${buildDir}/reports/tests/all")
+	project.evaluationDependsOnChildren()
+	allprojects.forEach { subproject ->
+		subproject.tasks.withType<Test> {
+			if (this.name == "unitTest" || this.name == "functionalTest" || this.name == "integrationTest") {
+				ignoreFailures = true
+				reports.junitXml.isEnabled = true
+				this@create.reportOn(this@withType)
+			}
+		}
+	}
+	doLast {
+		val reportFile = File(destinationDir, "index.html")
+		val successRegex = """(?s)<div class="infoBox" id="failures">\s*<div class="counter">0<\/div>""".toRegex()
+		if (!successRegex.containsMatchIn(reportFile.readText())) {
+			throw GradleException("There were failing tests. See the report at: ${reportFile.toURI()}")
 		}
 	}
 }
